--- a/Binary_Classification_on_Titanic_dataset/Binary_Classification_on_Titanic_dataset.ipynb
+++ b/Binary_Classification_on_Titanic_dataset/Binary_Classification_on_Titanic_dataset.ipynb
@@ -2779,7 +2779,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### We get an accuracy of close to 81% using a basic deep learning model which can be improved by pre-processing data and tuning the parameters of the deep learing model\n",
+    "### We get an accuracy of close to 79% on test data by using a basic deep learning model which can be improved by pre-processing data and tuning the parameters of the deep learing model\n",
     "____"
    ]
   },
